// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GreaseReportService format grease report should format result when data provided 1`] = `
Object {
  "errorWarningsAndNotes": Object {
    "clickHandler": [Function],
    "defaultOpen": false,
    "identifier": "block",
    "subordinates": Array [
      Object {
        "identifier": "block",
        "subordinates": Array [
          Object {
            "identifier": "text",
            "text": Array [
              " ",
            ],
          },
          Object {
            "identifier": "block",
            "subordinates": Array [
              Object {
                "identifier": "text",
                "text": Array [
                  "Relubrication should be carried out once a year.",
                ],
              },
              Object {
                "identifier": "text",
                "text": Array [
                  "  · Arcanol XTRA3",
                ],
              },
              Object {
                "identifier": "text",
                "text": Array [
                  "  · Arcanol Clean M",
                ],
              },
              Object {
                "identifier": "text",
                "text": Array [
                  "  · Arcanol MOTION 2",
                ],
              },
              Object {
                "identifier": "text",
                "text": Array [
                  "  · Non-Schaeffler Multi-Purpose Grease",
                ],
              },
              Object {
                "identifier": "text",
                "text": Array [
                  "  · Non-Schaeffler High-Temperature Grease",
                ],
              },
              Object {
                "identifier": "text",
                "text": Array [
                  "  · Arcanol MULTITOP",
                ],
              },
              Object {
                "identifier": "text",
                "text": Array [
                  "  · Arcanol MULTI2",
                ],
              },
              Object {
                "identifier": "text",
                "text": Array [
                  "  · Arcanol MULTI3",
                ],
              },
              Object {
                "identifier": "text",
                "text": Array [
                  "  · Arcanol LOAD1000",
                ],
              },
              Object {
                "identifier": "text",
                "text": Array [
                  "  · Arcanol LOAD150",
                ],
              },
              Object {
                "identifier": "text",
                "text": Array [
                  "  · Arcanol LOAD220",
                ],
              },
              Object {
                "identifier": "text",
                "text": Array [
                  "  · Arcanol LOAD400",
                ],
              },
              Object {
                "identifier": "text",
                "text": Array [
                  "  · Arcanol LOAD460",
                ],
              },
              Object {
                "identifier": "text",
                "text": Array [
                  "  · Arcanol TEMP90",
                ],
              },
              Object {
                "identifier": "text",
                "text": Array [
                  "  · Arcanol TEMP110",
                ],
              },
              Object {
                "identifier": "text",
                "text": Array [
                  "  · Arcanol TEMP120",
                ],
              },
              Object {
                "identifier": "text",
                "text": Array [
                  "  · Arcanol TEMP200",
                ],
              },
              Object {
                "identifier": "text",
                "text": Array [
                  "  · Arcanol SPEED 2,6",
                ],
              },
              Object {
                "identifier": "text",
                "text": Array [
                  "  · Arcanol VIB3",
                ],
              },
              Object {
                "identifier": "text",
                "text": Array [
                  "  · Arcanol FOOD2",
                ],
              },
              Object {
                "identifier": "text",
                "text": Array [
                  " ",
                ],
              },
              Object {
                "identifier": "text",
                "text": Array [
                  "A grease service life >3 years must be agreed with the lubricant supplier with regard to the respective application. The guide value issued in Bearinx for the grease service life is limited to 5 years. In individual cases, grease usage durations greater than 5 years are also possible. If necessary, please contact the Schaeffler engineering service, that can advise you on the basis of the practical experience. ",
                ],
              },
              Object {
                "identifier": "text",
                "text": Array [
                  " ",
                ],
              },
              Object {
                "identifier": "text",
                "text": Array [
                  "The operating temperature is below the recommended minimum operating temperature for the following greases:",
                ],
              },
              Object {
                "identifier": "text",
                "text": Array [
                  "  · Arcanol TEMP120 ( 158.0 deg F < 176.0 deg F ) ",
                ],
              },
              Object {
                "identifier": "text",
                "text": Array [
                  "  · Arcanol TEMP200 ( 158.0 deg F < 302.0 deg F ) ",
                ],
              },
              Object {
                "identifier": "text",
                "text": Array [
                  " ",
                ],
              },
            ],
          },
        ],
        "title": "Warnings",
        "titleID": "STRING_WARNING_BLOCK",
      },
      Object {
        "identifier": "block",
        "subordinates": Array [
          Object {
            "identifier": "text",
            "text": Array [
              " ",
            ],
          },
          Object {
            "identifier": "block",
            "subordinates": Array [
              Object {
                "identifier": "text",
                "text": Array [
                  "As the simplified load input via load levels has been used, the thermally safe operating speed as well as the static load safety are not checked.",
                ],
              },
              Object {
                "identifier": "text",
                "text": Array [
                  " ",
                ],
              },
              Object {
                "identifier": "text",
                "text": Array [
                  "Calculation of the grease service life and the relubrication interval corresponds to the catalog method. The internal geometry and the internal load distribution are not taken into consideration in the calculation. If you have any questions relating to selection of a suitable grease, please contact the Schaeffler engineering service. If the axis of rotation is vertical, the supply of lubricant to the contact must be checked.",
                ],
              },
              Object {
                "identifier": "text",
                "text": Array [
                  " ",
                ],
              },
              Object {
                "identifier": "text",
                "text": Array [
                  "In the Grease App, fatigue life is not considered or calculated. Please check this separately.",
                ],
              },
              Object {
                "identifier": "text",
                "text": Array [
                  " ",
                ],
              },
              Object {
                "identifier": "text",
                "text": Array [
                  "When calculating the amount of lubricant, only the volume of the bearing is taken into account, while the free space of the surrounding construction and the volume of the supply lines are not considered.",
                ],
              },
              Object {
                "identifier": "text",
                "text": Array [
                  " ",
                ],
              },
              Object {
                "identifier": "text",
                "text": Array [
                  "The specified grease quantities are only guide values, which may be deviated from based on practical experience. In case of questions, please contact the Schaeffler engineering service.",
                ],
              },
              Object {
                "identifier": "text",
                "text": Array [
                  " ",
                ],
              },
              Object {
                "identifier": "text",
                "text": Array [
                  "For the Non-Schaeffler Greases the individual properties are unknown. Therefore, criteria on the suitability of the grease are not checked for these greases (e.g., viscosity ratio, additivation, n*dm-limits of the grease, thermally safe operating speed, suitability for the CONCEPT1 lubricator).",
                ],
              },
              Object {
                "identifier": "text",
                "text": Array [
                  "  · Non-Schaeffler Multi-Purpose Grease",
                ],
              },
              Object {
                "identifier": "text",
                "text": Array [
                  "  · Non-Schaeffler High-Temperature Grease",
                ],
              },
              Object {
                "identifier": "text",
                "text": Array [
                  " ",
                ],
              },
            ],
          },
        ],
        "title": "Notes",
        "titleID": "STRING_NOTE_BLOCK",
      },
    ],
    "title": "calculationResult.errorsWarningsNotes",
  },
  "greaseResult": Array [
    Object {
      "greaseSelection": Object {
        "baseOilViscosityAt40": "responseOf:baseOilViscosityAt40",
        "density": "responseOf:density",
        "greaseServiceLife": "responseOf:greaseServiceLife",
        "h1Registration": "responseOf:h1Registration",
        "lowerTemperatureLimit": "responseOf:lowerTemperatureLimit",
        "upperTemperatureLimit": "responseOf:upperTemperatureLimit",
      },
      "initialLubrication": Object {
        "initialGreaseQuantity": "responseOf:initialGreaseQuantity",
      },
      "isPreferred": false,
      "isSufficient": "responseOf:isSufficient",
      "mainTitle": "Arcanol MULTI2",
      "performance": Object {
        "additiveRequired": "responseOf:additiveRequired",
        "effectiveEpAdditivation": "responseOf:effectiveEpAdditivation",
        "lowFriction": "responseOf:lowFriction",
        "suitableForVibrations": "responseOf:suitableForVibrations",
        "supportForSeals": "responseOf:supportForSeals",
        "viscosityRatio": "responseOf:viscosityRatio",
      },
      "relubrication": Object {
        "concept1": "responseOf:automaticLubrication",
        "maximumManualRelubricationPerInterval": "responseOf:maximumManualRelubricationInterval",
        "relubricationInterval": "responseOf:relubricationInterval",
        "relubricationPer30Days": "responseOf:relubricationPer30Days",
        "relubricationPer365Days": "responseOf:relubricationPer365Days",
        "relubricationPer7Days": "responseOf:relubricationPer7Days",
        "relubricationQuantityPer1000OperatingHours": "responseOf:relubricationQuantityPer1000OperatingHours",
      },
      "subTitle": "Mineral oil, NLGI2, Lithium soap",
    },
    Object {
      "greaseSelection": Object {
        "baseOilViscosityAt40": "responseOf:baseOilViscosityAt40",
        "density": "responseOf:density",
        "greaseServiceLife": "responseOf:greaseServiceLife",
        "h1Registration": "responseOf:h1Registration",
        "lowerTemperatureLimit": "responseOf:lowerTemperatureLimit",
        "upperTemperatureLimit": "responseOf:upperTemperatureLimit",
      },
      "initialLubrication": Object {
        "initialGreaseQuantity": "responseOf:initialGreaseQuantity",
      },
      "isPreferred": false,
      "isSufficient": "responseOf:isSufficient",
      "mainTitle": "Arcanol MULTI3",
      "performance": Object {
        "additiveRequired": "responseOf:additiveRequired",
        "effectiveEpAdditivation": "responseOf:effectiveEpAdditivation",
        "lowFriction": "responseOf:lowFriction",
        "suitableForVibrations": "responseOf:suitableForVibrations",
        "supportForSeals": "responseOf:supportForSeals",
        "viscosityRatio": "responseOf:viscosityRatio",
      },
      "relubrication": Object {
        "concept1": "responseOf:automaticLubrication",
        "maximumManualRelubricationPerInterval": "responseOf:maximumManualRelubricationInterval",
        "relubricationInterval": "responseOf:relubricationInterval",
        "relubricationPer30Days": "responseOf:relubricationPer30Days",
        "relubricationPer365Days": "responseOf:relubricationPer365Days",
        "relubricationPer7Days": "responseOf:relubricationPer7Days",
        "relubricationQuantityPer1000OperatingHours": "responseOf:relubricationQuantityPer1000OperatingHours",
      },
      "subTitle": "Mineral oil, NLGI3, Lithium soap",
    },
    Object {
      "greaseSelection": Object {
        "baseOilViscosityAt40": "responseOf:baseOilViscosityAt40",
        "density": "responseOf:density",
        "greaseServiceLife": "responseOf:greaseServiceLife",
        "h1Registration": "responseOf:h1Registration",
        "lowerTemperatureLimit": "responseOf:lowerTemperatureLimit",
        "upperTemperatureLimit": "responseOf:upperTemperatureLimit",
      },
      "initialLubrication": Object {
        "initialGreaseQuantity": "responseOf:initialGreaseQuantity",
      },
      "isPreferred": false,
      "isSufficient": "responseOf:isSufficient",
      "mainTitle": "Arcanol MULTITOP",
      "performance": Object {
        "additiveRequired": "responseOf:additiveRequired",
        "effectiveEpAdditivation": "responseOf:effectiveEpAdditivation",
        "lowFriction": "responseOf:lowFriction",
        "suitableForVibrations": "responseOf:suitableForVibrations",
        "supportForSeals": "responseOf:supportForSeals",
        "viscosityRatio": "responseOf:viscosityRatio",
      },
      "relubrication": Object {
        "concept1": "responseOf:automaticLubrication",
        "maximumManualRelubricationPerInterval": "responseOf:maximumManualRelubricationInterval",
        "relubricationInterval": "responseOf:relubricationInterval",
        "relubricationPer30Days": "responseOf:relubricationPer30Days",
        "relubricationPer365Days": "responseOf:relubricationPer365Days",
        "relubricationPer7Days": "responseOf:relubricationPer7Days",
        "relubricationQuantityPer1000OperatingHours": "responseOf:relubricationQuantityPer1000OperatingHours",
      },
      "subTitle": "Ester/Min/SHC oil, NLGI2, Lithium soap",
    },
    Object {
      "greaseSelection": Object {
        "baseOilViscosityAt40": "responseOf:baseOilViscosityAt40",
        "density": "responseOf:density",
        "greaseServiceLife": "responseOf:greaseServiceLife",
        "h1Registration": "responseOf:h1Registration",
        "lowerTemperatureLimit": "responseOf:lowerTemperatureLimit",
        "upperTemperatureLimit": "responseOf:upperTemperatureLimit",
      },
      "initialLubrication": Object {
        "initialGreaseQuantity": "responseOf:initialGreaseQuantity",
      },
      "isPreferred": false,
      "isSufficient": "responseOf:isSufficient",
      "mainTitle": "Arcanol LOAD150",
      "performance": Object {
        "additiveRequired": "responseOf:additiveRequired",
        "effectiveEpAdditivation": "responseOf:effectiveEpAdditivation",
        "lowFriction": "responseOf:lowFriction",
        "suitableForVibrations": "responseOf:suitableForVibrations",
        "supportForSeals": "responseOf:supportForSeals",
        "viscosityRatio": "responseOf:viscosityRatio",
      },
      "relubrication": Object {
        "concept1": "responseOf:automaticLubrication",
        "maximumManualRelubricationPerInterval": "responseOf:maximumManualRelubricationInterval",
        "relubricationInterval": "responseOf:relubricationInterval",
        "relubricationPer30Days": "responseOf:relubricationPer30Days",
        "relubricationPer365Days": "responseOf:relubricationPer365Days",
        "relubricationPer7Days": "responseOf:relubricationPer7Days",
        "relubricationQuantityPer1000OperatingHours": "responseOf:relubricationQuantityPer1000OperatingHours",
      },
      "subTitle": "Mineral oil, NLGI2, Lithium/complex soap",
    },
    Object {
      "greaseSelection": Object {
        "baseOilViscosityAt40": "responseOf:baseOilViscosityAt40",
        "density": "responseOf:density",
        "greaseServiceLife": "responseOf:greaseServiceLife",
        "h1Registration": "responseOf:h1Registration",
        "lowerTemperatureLimit": "responseOf:lowerTemperatureLimit",
        "upperTemperatureLimit": "responseOf:upperTemperatureLimit",
      },
      "initialLubrication": Object {
        "initialGreaseQuantity": "responseOf:initialGreaseQuantity",
      },
      "isPreferred": false,
      "isSufficient": "responseOf:isSufficient",
      "mainTitle": "Arcanol LOAD400",
      "performance": Object {
        "additiveRequired": "responseOf:additiveRequired",
        "effectiveEpAdditivation": "responseOf:effectiveEpAdditivation",
        "lowFriction": "responseOf:lowFriction",
        "suitableForVibrations": "responseOf:suitableForVibrations",
        "supportForSeals": "responseOf:supportForSeals",
        "viscosityRatio": "responseOf:viscosityRatio",
      },
      "relubrication": Object {
        "concept1": "responseOf:automaticLubrication",
        "maximumManualRelubricationPerInterval": "responseOf:maximumManualRelubricationInterval",
        "relubricationInterval": "responseOf:relubricationInterval",
        "relubricationPer30Days": "responseOf:relubricationPer30Days",
        "relubricationPer365Days": "responseOf:relubricationPer365Days",
        "relubricationPer7Days": "responseOf:relubricationPer7Days",
        "relubricationQuantityPer1000OperatingHours": "responseOf:relubricationQuantityPer1000OperatingHours",
      },
      "subTitle": "Mineral oil, NLGI2, Lithium/calcium soap",
    },
    Object {
      "greaseSelection": Object {
        "baseOilViscosityAt40": "responseOf:baseOilViscosityAt40",
        "density": "responseOf:density",
        "greaseServiceLife": "responseOf:greaseServiceLife",
        "h1Registration": "responseOf:h1Registration",
        "lowerTemperatureLimit": "responseOf:lowerTemperatureLimit",
        "upperTemperatureLimit": "responseOf:upperTemperatureLimit",
      },
      "initialLubrication": Object {
        "initialGreaseQuantity": "responseOf:initialGreaseQuantity",
      },
      "isPreferred": false,
      "isSufficient": "responseOf:isSufficient",
      "mainTitle": "Arcanol MOTION 2",
      "performance": Object {
        "additiveRequired": "responseOf:additiveRequired",
        "effectiveEpAdditivation": "responseOf:effectiveEpAdditivation",
        "lowFriction": "responseOf:lowFriction",
        "suitableForVibrations": "responseOf:suitableForVibrations",
        "supportForSeals": "responseOf:supportForSeals",
        "viscosityRatio": "responseOf:viscosityRatio",
      },
      "relubrication": Object {
        "concept1": "responseOf:automaticLubrication",
        "maximumManualRelubricationPerInterval": "responseOf:maximumManualRelubricationInterval",
        "relubricationInterval": "responseOf:relubricationInterval",
        "relubricationPer30Days": "responseOf:relubricationPer30Days",
        "relubricationPer365Days": "responseOf:relubricationPer365Days",
        "relubricationPer7Days": "responseOf:relubricationPer7Days",
        "relubricationQuantityPer1000OperatingHours": "responseOf:relubricationQuantityPer1000OperatingHours",
      },
      "subTitle": "Synthetic oil, NLGI2, Lithium soap",
    },
    Object {
      "greaseSelection": Object {
        "baseOilViscosityAt40": "responseOf:baseOilViscosityAt40",
        "density": "responseOf:density",
        "greaseServiceLife": "responseOf:greaseServiceLife",
        "h1Registration": "responseOf:h1Registration",
        "lowerTemperatureLimit": "responseOf:lowerTemperatureLimit",
        "upperTemperatureLimit": "responseOf:upperTemperatureLimit",
      },
      "initialLubrication": Object {
        "initialGreaseQuantity": "responseOf:initialGreaseQuantity",
      },
      "isPreferred": false,
      "isSufficient": "responseOf:isSufficient",
      "mainTitle": "Arcanol TEMP90",
      "performance": Object {
        "additiveRequired": "responseOf:additiveRequired",
        "effectiveEpAdditivation": "responseOf:effectiveEpAdditivation",
        "lowFriction": "responseOf:lowFriction",
        "suitableForVibrations": "responseOf:suitableForVibrations",
        "supportForSeals": "responseOf:supportForSeals",
        "viscosityRatio": "responseOf:viscosityRatio",
      },
      "relubrication": Object {
        "concept1": "responseOf:automaticLubrication",
        "maximumManualRelubricationPerInterval": "responseOf:maximumManualRelubricationInterval",
        "relubricationInterval": "responseOf:relubricationInterval",
        "relubricationPer30Days": "responseOf:relubricationPer30Days",
        "relubricationPer365Days": "responseOf:relubricationPer365Days",
        "relubricationPer7Days": "responseOf:relubricationPer7Days",
        "relubricationQuantityPer1000OperatingHours": "responseOf:relubricationQuantityPer1000OperatingHours",
      },
      "subTitle": "Mineral + PAO oil, NLGI3, Polyurea",
    },
    Object {
      "greaseSelection": Object {
        "baseOilViscosityAt40": "responseOf:baseOilViscosityAt40",
        "density": "responseOf:density",
        "greaseServiceLife": "responseOf:greaseServiceLife",
        "h1Registration": "responseOf:h1Registration",
        "lowerTemperatureLimit": "responseOf:lowerTemperatureLimit",
        "upperTemperatureLimit": "responseOf:upperTemperatureLimit",
      },
      "initialLubrication": Object {
        "initialGreaseQuantity": "responseOf:initialGreaseQuantity",
      },
      "isPreferred": false,
      "isSufficient": "responseOf:isSufficient",
      "mainTitle": "Arcanol TEMP110",
      "performance": Object {
        "additiveRequired": "responseOf:additiveRequired",
        "effectiveEpAdditivation": "responseOf:effectiveEpAdditivation",
        "lowFriction": "responseOf:lowFriction",
        "suitableForVibrations": "responseOf:suitableForVibrations",
        "supportForSeals": "responseOf:supportForSeals",
        "viscosityRatio": "responseOf:viscosityRatio",
      },
      "relubrication": Object {
        "concept1": "responseOf:automaticLubrication",
        "maximumManualRelubricationPerInterval": "responseOf:maximumManualRelubricationInterval",
        "relubricationInterval": "responseOf:relubricationInterval",
        "relubricationPer30Days": "responseOf:relubricationPer30Days",
        "relubricationPer365Days": "responseOf:relubricationPer365Days",
        "relubricationPer7Days": "responseOf:relubricationPer7Days",
        "relubricationQuantityPer1000OperatingHours": "responseOf:relubricationQuantityPer1000OperatingHours",
      },
      "subTitle": "Synthetic oil, NLGI2, Lithium/complex soap",
    },
    Object {
      "greaseSelection": Object {
        "baseOilViscosityAt40": "responseOf:baseOilViscosityAt40",
        "density": "responseOf:density",
        "greaseServiceLife": "responseOf:greaseServiceLife",
        "h1Registration": "responseOf:h1Registration",
        "lowerTemperatureLimit": "responseOf:lowerTemperatureLimit",
        "upperTemperatureLimit": "responseOf:upperTemperatureLimit",
      },
      "initialLubrication": Object {
        "initialGreaseQuantity": "responseOf:initialGreaseQuantity",
      },
      "isPreferred": false,
      "isSufficient": "responseOf:isSufficient",
      "mainTitle": "Arcanol LOAD220",
      "performance": Object {
        "additiveRequired": "responseOf:additiveRequired",
        "effectiveEpAdditivation": "responseOf:effectiveEpAdditivation",
        "lowFriction": "responseOf:lowFriction",
        "suitableForVibrations": "responseOf:suitableForVibrations",
        "supportForSeals": "responseOf:supportForSeals",
        "viscosityRatio": "responseOf:viscosityRatio",
      },
      "relubrication": Object {
        "concept1": "responseOf:automaticLubrication",
        "maximumManualRelubricationPerInterval": "responseOf:maximumManualRelubricationInterval",
        "relubricationInterval": "responseOf:relubricationInterval",
        "relubricationPer30Days": "responseOf:relubricationPer30Days",
        "relubricationPer365Days": "responseOf:relubricationPer365Days",
        "relubricationPer7Days": "responseOf:relubricationPer7Days",
        "relubricationQuantityPer1000OperatingHours": "responseOf:relubricationQuantityPer1000OperatingHours",
      },
      "subTitle": "Mineral oil, NLGI2, Lithium/calcium soap",
    },
    Object {
      "greaseSelection": Object {
        "baseOilViscosityAt40": "responseOf:baseOilViscosityAt40",
        "density": "responseOf:density",
        "greaseServiceLife": "responseOf:greaseServiceLife",
        "h1Registration": "responseOf:h1Registration",
        "lowerTemperatureLimit": "responseOf:lowerTemperatureLimit",
        "upperTemperatureLimit": "responseOf:upperTemperatureLimit",
      },
      "initialLubrication": Object {
        "initialGreaseQuantity": "responseOf:initialGreaseQuantity",
      },
      "isPreferred": false,
      "isSufficient": "responseOf:isSufficient",
      "mainTitle": "Arcanol LOAD460",
      "performance": Object {
        "additiveRequired": "responseOf:additiveRequired",
        "effectiveEpAdditivation": "responseOf:effectiveEpAdditivation",
        "lowFriction": "responseOf:lowFriction",
        "suitableForVibrations": "responseOf:suitableForVibrations",
        "supportForSeals": "responseOf:supportForSeals",
        "viscosityRatio": "responseOf:viscosityRatio",
      },
      "relubrication": Object {
        "concept1": "responseOf:automaticLubrication",
        "maximumManualRelubricationPerInterval": "responseOf:maximumManualRelubricationInterval",
        "relubricationInterval": "responseOf:relubricationInterval",
        "relubricationPer30Days": "responseOf:relubricationPer30Days",
        "relubricationPer365Days": "responseOf:relubricationPer365Days",
        "relubricationPer7Days": "responseOf:relubricationPer7Days",
        "relubricationQuantityPer1000OperatingHours": "responseOf:relubricationQuantityPer1000OperatingHours",
      },
      "subTitle": "Mineral oil, NLGI1, Lithium/calcium soap",
    },
    Object {
      "greaseSelection": Object {
        "baseOilViscosityAt40": "responseOf:baseOilViscosityAt40",
        "density": "responseOf:density",
        "greaseServiceLife": "responseOf:greaseServiceLife",
        "h1Registration": "responseOf:h1Registration",
        "lowerTemperatureLimit": "responseOf:lowerTemperatureLimit",
        "upperTemperatureLimit": "responseOf:upperTemperatureLimit",
      },
      "initialLubrication": Object {
        "initialGreaseQuantity": "responseOf:initialGreaseQuantity",
      },
      "isPreferred": false,
      "isSufficient": "responseOf:isSufficient",
      "mainTitle": "Arcanol TEMP120",
      "performance": Object {
        "additiveRequired": "responseOf:additiveRequired",
        "effectiveEpAdditivation": "responseOf:effectiveEpAdditivation",
        "lowFriction": "responseOf:lowFriction",
        "suitableForVibrations": "responseOf:suitableForVibrations",
        "supportForSeals": "responseOf:supportForSeals",
        "viscosityRatio": "responseOf:viscosityRatio",
      },
      "relubrication": Object {
        "concept1": "responseOf:automaticLubrication",
        "maximumManualRelubricationPerInterval": "responseOf:maximumManualRelubricationInterval",
        "relubricationInterval": "responseOf:relubricationInterval",
        "relubricationPer30Days": "responseOf:relubricationPer30Days",
        "relubricationPer365Days": "responseOf:relubricationPer365Days",
        "relubricationPer7Days": "responseOf:relubricationPer7Days",
        "relubricationQuantityPer1000OperatingHours": "responseOf:relubricationQuantityPer1000OperatingHours",
      },
      "subTitle": "PAO oil, NLGI2, Polyurea",
    },
    Object {
      "greaseSelection": Object {
        "baseOilViscosityAt40": "responseOf:baseOilViscosityAt40",
        "density": "responseOf:density",
        "greaseServiceLife": "responseOf:greaseServiceLife",
        "h1Registration": "responseOf:h1Registration",
        "lowerTemperatureLimit": "responseOf:lowerTemperatureLimit",
        "upperTemperatureLimit": "responseOf:upperTemperatureLimit",
      },
      "initialLubrication": Object {
        "initialGreaseQuantity": "responseOf:initialGreaseQuantity",
      },
      "isPreferred": false,
      "isSufficient": "responseOf:isSufficient",
      "mainTitle": "Arcanol Clean M",
      "performance": Object {
        "additiveRequired": "responseOf:additiveRequired",
        "effectiveEpAdditivation": "responseOf:effectiveEpAdditivation",
        "lowFriction": "responseOf:lowFriction",
        "suitableForVibrations": "responseOf:suitableForVibrations",
        "supportForSeals": "responseOf:supportForSeals",
        "viscosityRatio": "responseOf:viscosityRatio",
      },
      "relubrication": Object {
        "concept1": "responseOf:automaticLubrication",
        "maximumManualRelubricationPerInterval": "responseOf:maximumManualRelubricationInterval",
        "relubricationInterval": "responseOf:relubricationInterval",
        "relubricationPer30Days": "responseOf:relubricationPer30Days",
        "relubricationPer365Days": "responseOf:relubricationPer365Days",
        "relubricationPer7Days": "responseOf:relubricationPer7Days",
        "relubricationQuantityPer1000OperatingHours": "responseOf:relubricationQuantityPer1000OperatingHours",
      },
      "subTitle": "Ether oil, NLGI2, Polyurea",
    },
    Object {
      "greaseSelection": Object {
        "baseOilViscosityAt40": "responseOf:baseOilViscosityAt40",
        "density": "responseOf:density",
        "greaseServiceLife": "responseOf:greaseServiceLife",
        "h1Registration": "responseOf:h1Registration",
        "lowerTemperatureLimit": "responseOf:lowerTemperatureLimit",
        "upperTemperatureLimit": "responseOf:upperTemperatureLimit",
      },
      "initialLubrication": Object {
        "initialGreaseQuantity": "responseOf:initialGreaseQuantity",
      },
      "isPreferred": false,
      "isSufficient": "responseOf:isSufficient",
      "mainTitle": "Arcanol VIB3",
      "performance": Object {
        "additiveRequired": "responseOf:additiveRequired",
        "effectiveEpAdditivation": "responseOf:effectiveEpAdditivation",
        "lowFriction": "responseOf:lowFriction",
        "suitableForVibrations": "responseOf:suitableForVibrations",
        "supportForSeals": "responseOf:supportForSeals",
        "viscosityRatio": "responseOf:viscosityRatio",
      },
      "relubrication": Object {
        "concept1": "responseOf:automaticLubrication",
        "maximumManualRelubricationPerInterval": "responseOf:maximumManualRelubricationInterval",
        "relubricationInterval": "responseOf:relubricationInterval",
        "relubricationPer30Days": "responseOf:relubricationPer30Days",
        "relubricationPer365Days": "responseOf:relubricationPer365Days",
        "relubricationPer7Days": "responseOf:relubricationPer7Days",
        "relubricationQuantityPer1000OperatingHours": "responseOf:relubricationQuantityPer1000OperatingHours",
      },
      "subTitle": "Mineral oil, NLGI3-4, Lithium/complex soap",
    },
    Object {
      "greaseSelection": Object {
        "baseOilViscosityAt40": "responseOf:baseOilViscosityAt40",
        "density": "responseOf:density",
        "greaseServiceLife": "responseOf:greaseServiceLife",
        "h1Registration": "responseOf:h1Registration",
        "lowerTemperatureLimit": "responseOf:lowerTemperatureLimit",
        "upperTemperatureLimit": "responseOf:upperTemperatureLimit",
      },
      "initialLubrication": Object {
        "initialGreaseQuantity": "responseOf:initialGreaseQuantity",
      },
      "isPreferred": false,
      "isSufficient": "responseOf:isSufficient",
      "mainTitle": "Arcanol FOOD2",
      "performance": Object {
        "additiveRequired": "responseOf:additiveRequired",
        "effectiveEpAdditivation": "responseOf:effectiveEpAdditivation",
        "lowFriction": "responseOf:lowFriction",
        "suitableForVibrations": "responseOf:suitableForVibrations",
        "supportForSeals": "responseOf:supportForSeals",
        "viscosityRatio": "responseOf:viscosityRatio",
      },
      "relubrication": Object {
        "concept1": "responseOf:automaticLubrication",
        "maximumManualRelubricationPerInterval": "responseOf:maximumManualRelubricationInterval",
        "relubricationInterval": "responseOf:relubricationInterval",
        "relubricationPer30Days": "responseOf:relubricationPer30Days",
        "relubricationPer365Days": "responseOf:relubricationPer365Days",
        "relubricationPer7Days": "responseOf:relubricationPer7Days",
        "relubricationQuantityPer1000OperatingHours": "responseOf:relubricationQuantityPer1000OperatingHours",
      },
      "subTitle": "PAO oil, NLGI2, Aluminum-Complex",
    },
    Object {
      "greaseSelection": Object {
        "baseOilViscosityAt40": "responseOf:baseOilViscosityAt40",
        "density": "responseOf:density",
        "greaseServiceLife": "responseOf:greaseServiceLife",
        "h1Registration": "responseOf:h1Registration",
        "lowerTemperatureLimit": "responseOf:lowerTemperatureLimit",
        "upperTemperatureLimit": "responseOf:upperTemperatureLimit",
      },
      "initialLubrication": Object {
        "initialGreaseQuantity": "responseOf:initialGreaseQuantity",
      },
      "isPreferred": false,
      "isSufficient": "responseOf:isSufficient",
      "mainTitle": "Arcanol TEMP200",
      "performance": Object {
        "additiveRequired": "responseOf:additiveRequired",
        "effectiveEpAdditivation": "responseOf:effectiveEpAdditivation",
        "lowFriction": "responseOf:lowFriction",
        "suitableForVibrations": "responseOf:suitableForVibrations",
        "supportForSeals": "responseOf:supportForSeals",
        "viscosityRatio": "responseOf:viscosityRatio",
      },
      "relubrication": Object {
        "concept1": "responseOf:automaticLubrication",
        "maximumManualRelubricationPerInterval": "responseOf:maximumManualRelubricationInterval",
        "relubricationInterval": "responseOf:relubricationInterval",
        "relubricationPer30Days": "responseOf:relubricationPer30Days",
        "relubricationPer365Days": "responseOf:relubricationPer365Days",
        "relubricationPer7Days": "responseOf:relubricationPer7Days",
        "relubricationQuantityPer1000OperatingHours": "responseOf:relubricationQuantityPer1000OperatingHours",
      },
      "subTitle": "Alkoxyfluor oil, NLGI2, PTFE",
    },
    Object {
      "greaseSelection": Object {
        "baseOilViscosityAt40": "responseOf:baseOilViscosityAt40",
        "density": "responseOf:density",
        "greaseServiceLife": "responseOf:greaseServiceLife",
        "h1Registration": "responseOf:h1Registration",
        "lowerTemperatureLimit": "responseOf:lowerTemperatureLimit",
        "upperTemperatureLimit": "responseOf:upperTemperatureLimit",
      },
      "initialLubrication": Object {
        "initialGreaseQuantity": "responseOf:initialGreaseQuantity",
      },
      "isPreferred": false,
      "isSufficient": "responseOf:isSufficient",
      "mainTitle": "Arcanol LOAD1000",
      "performance": Object {
        "additiveRequired": "responseOf:additiveRequired",
        "effectiveEpAdditivation": "responseOf:effectiveEpAdditivation",
        "lowFriction": "responseOf:lowFriction",
        "suitableForVibrations": "responseOf:suitableForVibrations",
        "supportForSeals": "responseOf:supportForSeals",
        "viscosityRatio": "responseOf:viscosityRatio",
      },
      "relubrication": Object {
        "concept1": "responseOf:automaticLubrication",
        "maximumManualRelubricationPerInterval": "responseOf:maximumManualRelubricationInterval",
        "relubricationInterval": "responseOf:relubricationInterval",
        "relubricationPer30Days": "responseOf:relubricationPer30Days",
        "relubricationPer365Days": "responseOf:relubricationPer365Days",
        "relubricationPer7Days": "responseOf:relubricationPer7Days",
        "relubricationQuantityPer1000OperatingHours": "responseOf:relubricationQuantityPer1000OperatingHours",
      },
      "subTitle": "Mineral oil, NLGI2, Lithium/calcium soap",
    },
    Object {
      "greaseSelection": Object {
        "baseOilViscosityAt40": "responseOf:baseOilViscosityAt40",
        "density": "responseOf:density",
        "greaseServiceLife": "responseOf:greaseServiceLife",
        "h1Registration": "responseOf:h1Registration",
        "lowerTemperatureLimit": "responseOf:lowerTemperatureLimit",
        "upperTemperatureLimit": "responseOf:upperTemperatureLimit",
      },
      "initialLubrication": Object {
        "initialGreaseQuantity": "responseOf:initialGreaseQuantity",
      },
      "isPreferred": false,
      "isSufficient": "responseOf:isSufficient",
      "mainTitle": "Arcanol SPEED 2,6",
      "performance": Object {
        "additiveRequired": "responseOf:additiveRequired",
        "effectiveEpAdditivation": "responseOf:effectiveEpAdditivation",
        "lowFriction": "responseOf:lowFriction",
        "suitableForVibrations": "responseOf:suitableForVibrations",
        "supportForSeals": "responseOf:supportForSeals",
        "viscosityRatio": "responseOf:viscosityRatio",
      },
      "relubrication": Object {
        "concept1": "responseOf:automaticLubrication",
        "maximumManualRelubricationPerInterval": "responseOf:maximumManualRelubricationInterval",
        "relubricationInterval": "responseOf:relubricationInterval",
        "relubricationPer30Days": "responseOf:relubricationPer30Days",
        "relubricationPer365Days": "responseOf:relubricationPer365Days",
        "relubricationPer7Days": "responseOf:relubricationPer7Days",
        "relubricationQuantityPer1000OperatingHours": "responseOf:relubricationQuantityPer1000OperatingHours",
      },
      "subTitle": "PAO/Ester oil, NLGI2-3, Lithium/complex soap",
    },
    Object {
      "greaseSelection": Object {
        "baseOilViscosityAt40": "responseOf:baseOilViscosityAt40",
        "density": "responseOf:density",
        "greaseServiceLife": "responseOf:greaseServiceLife",
        "h1Registration": "responseOf:h1Registration",
        "lowerTemperatureLimit": "responseOf:lowerTemperatureLimit",
        "upperTemperatureLimit": "responseOf:upperTemperatureLimit",
      },
      "initialLubrication": Object {
        "initialGreaseQuantity": "responseOf:initialGreaseQuantity",
      },
      "isPreferred": false,
      "isSufficient": "responseOf:isSufficient",
      "mainTitle": "Non-Schaeffler Multi-Purpose Grease",
      "performance": Object {
        "additiveRequired": "responseOf:additiveRequired",
        "effectiveEpAdditivation": "responseOf:effectiveEpAdditivation",
        "lowFriction": "responseOf:lowFriction",
        "suitableForVibrations": "responseOf:suitableForVibrations",
        "supportForSeals": "responseOf:supportForSeals",
        "viscosityRatio": "responseOf:viscosityRatio",
      },
      "relubrication": Object {
        "concept1": "responseOf:automaticLubrication",
        "maximumManualRelubricationPerInterval": "responseOf:maximumManualRelubricationInterval",
        "relubricationInterval": "responseOf:relubricationInterval",
        "relubricationPer30Days": "responseOf:relubricationPer30Days",
        "relubricationPer365Days": "responseOf:relubricationPer365Days",
        "relubricationPer7Days": "responseOf:relubricationPer7Days",
        "relubricationQuantityPer1000OperatingHours": "responseOf:relubricationQuantityPer1000OperatingHours",
      },
    },
    Object {
      "greaseSelection": Object {
        "baseOilViscosityAt40": "responseOf:baseOilViscosityAt40",
        "density": "responseOf:density",
        "greaseServiceLife": "responseOf:greaseServiceLife",
        "h1Registration": "responseOf:h1Registration",
        "lowerTemperatureLimit": "responseOf:lowerTemperatureLimit",
        "upperTemperatureLimit": "responseOf:upperTemperatureLimit",
      },
      "initialLubrication": Object {
        "initialGreaseQuantity": "responseOf:initialGreaseQuantity",
      },
      "isPreferred": false,
      "isSufficient": "responseOf:isSufficient",
      "mainTitle": "Non-Schaeffler High-Temperature Grease",
      "performance": Object {
        "additiveRequired": "responseOf:additiveRequired",
        "effectiveEpAdditivation": "responseOf:effectiveEpAdditivation",
        "lowFriction": "responseOf:lowFriction",
        "suitableForVibrations": "responseOf:suitableForVibrations",
        "supportForSeals": "responseOf:supportForSeals",
        "viscosityRatio": "responseOf:viscosityRatio",
      },
      "relubrication": Object {
        "concept1": "responseOf:automaticLubrication",
        "maximumManualRelubricationPerInterval": "responseOf:maximumManualRelubricationInterval",
        "relubricationInterval": "responseOf:relubricationInterval",
        "relubricationPer30Days": "responseOf:relubricationPer30Days",
        "relubricationPer365Days": "responseOf:relubricationPer365Days",
        "relubricationPer7Days": "responseOf:relubricationPer7Days",
        "relubricationQuantityPer1000OperatingHours": "responseOf:relubricationQuantityPer1000OperatingHours",
      },
    },
  ],
  "inputs": Object {
    "identifier": "block",
    "subordinates": Array [
      Object {
        "identifier": "variableBlock",
        "subordinates": Array [
          Object {
            "designation": "Designation",
            "identifier": "variableLine",
            "value": "6226",
          },
          Object {
            "designation": "Design",
            "identifier": "variableLine",
            "value": "Radial deep groove ball bearing",
          },
          Object {
            "designation": "Series",
            "identifier": "variableLine",
            "value": "62",
          },
        ],
        "title": "Bearing data",
        "titleID": "STRING_OUTP_BEARING_DATA",
      },
      Object {
        "identifier": "variableBlock",
        "subordinates": Array [
          Object {
            "abbreviation": "B",
            "designation": "Width",
            "identifier": "variableLine",
            "unit": "in",
            "value": "1.57480",
          },
          Object {
            "abbreviation": "D",
            "designation": "Outside diameter",
            "identifier": "variableLine",
            "unit": "in",
            "value": "9.05512",
          },
          Object {
            "abbreviation": "d",
            "designation": "Inside diameter",
            "identifier": "variableLine",
            "unit": "in",
            "value": "5.11811",
          },
        ],
        "title": "Bearing dimensions",
        "titleID": "STRING_OUTP_BEARING_DIMENSIONS",
      },
      Object {
        "identifier": "variableBlock",
        "subordinates": Array [
          Object {
            "abbreviation": "C0",
            "designation": "Basic static load rating",
            "identifier": "variableLine",
            "unit": "lbf",
            "value": "32800",
          },
          Object {
            "abbreviation": "C",
            "designation": "Basic dynamic load rating",
            "identifier": "variableLine",
            "unit": "lbf",
            "value": "39800",
          },
        ],
        "title": "Basic load ratings",
        "titleID": "STRING_OUTP_BASIC_LOAD_RATINGS",
      },
      Object {
        "identifier": "variableBlock",
        "subordinates": Array [
          Object {
            "designation": "Type of movement",
            "identifier": "variableLine",
            "value": "rotating",
          },
          Object {
            "abbreviation": "n_rel",
            "designation": "Relative speed",
            "identifier": "variableLine",
            "unit": "rpm",
            "value": "350.00",
          },
        ],
        "title": "Operating conditions",
        "titleID": "PROPERTY_PAGE_TITLE_OPERATING_CONDITIONS",
      },
      Object {
        "identifier": "variableBlock",
        "subordinates": Array [
          Object {
            "designation": "Load levels",
            "identifier": "variableLine",
            "value": "low (C0/P approx. 15)",
          },
        ],
        "title": "Load",
        "titleID": "STRING_OUTP_LOAD",
      },
      Object {
        "identifier": "variableBlock",
        "subordinates": Array [
          Object {
            "abbreviation": "Theta",
            "designation": "Operating temperature",
            "identifier": "variableLine",
            "unit": "deg F",
            "value": "158.0",
          },
          Object {
            "abbreviation": "t",
            "designation": "Ambient temperature",
            "identifier": "variableLine",
            "unit": "deg F",
            "value": "68.0",
          },
          Object {
            "designation": "Environmental influence",
            "identifier": "variableLine",
            "value": "0.8 (moderate)",
          },
        ],
        "title": "Temperatures",
        "titleID": "PROPERTY_PAGE_TITLE_TEMPERATURES",
      },
    ],
    "title": "Input",
    "titleID": "STRING_OUTP_INPUT",
  },
  "legalNote": "All rights are reserved, even in the event that a patent is granted or a utility model is registered. The document is to be treated confidentially. Without our written consent, neither the document itself nor copies thereof or other reproductions of the entire contents or excerpts thereof may be made available to third parties or misused in any other way by the recipient. Our dimensioning is based on your specifications and the information provided by you. Our dimensioning takes into account those risks which were recognizable to us on the basis of the information and specifications provided by you. Our dimensioning is made exclusively in connection with the purchase of our products. We do not assume any warranty in connection with the use of third-party products. The results have been worked out carefully and according to the state of the art, but do not represent any (explicit or implicit) guarantee of quality or durability in the legal sense. We are liable for the dimensioning and its results only in the case of intent and gross negligence. Unless expressly agreed otherwise, we are responsible for our scope of delivery only in accordance with the specifications documented herein, which form the basis of our dimensioning. We only perform component and system validations pertaining to the scope of services described herein. The responsibility for the overall system, of which our scope of delivery is only a part, is exclusively with you. All tasks and liabilities associated with the overall system and the integration of our scope of supply are your sole responsibility. In this respect, you are not released from the obligation to check our products for their suitability in the application with suitable methods or tests. If the document or the dimensioning is part of a supply contract or other agreement, the liability provisions agreed therein shall apply.",
}
`;

exports[`GreaseReportService format grease report should gracefully return empty object if empty array provided 1`] = `
Object {
  "errorWarningsAndNotes": Object {
    "clickHandler": [Function],
    "defaultOpen": true,
    "identifier": "block",
    "subordinates": Array [],
    "title": "calculationResult.errorsWarningsNotes",
  },
  "inputs": undefined,
  "legalNote": undefined,
}
`;

exports[`GreaseReportService format grease report when vertical axis is selected should format result when data provided 1`] = `
Object {
  "errorWarningsAndNotes": Object {
    "clickHandler": [Function],
    "defaultOpen": false,
    "identifier": "block",
    "subordinates": Array [
      Object {
        "identifier": "block",
        "subordinates": Array [
          Object {
            "identifier": "text",
            "text": Array [
              " ",
            ],
          },
          Object {
            "identifier": "block",
            "subordinates": Array [
              Object {
                "identifier": "text",
                "text": Array [
                  "Relubrication should be carried out once a year.",
                ],
              },
              Object {
                "identifier": "text",
                "text": Array [
                  "  · Arcanol XTRA3",
                ],
              },
              Object {
                "identifier": "text",
                "text": Array [
                  "  · Arcanol Clean M",
                ],
              },
              Object {
                "identifier": "text",
                "text": Array [
                  "  · Arcanol MOTION 2",
                ],
              },
              Object {
                "identifier": "text",
                "text": Array [
                  "  · Non-Schaeffler Multi-Purpose Grease",
                ],
              },
              Object {
                "identifier": "text",
                "text": Array [
                  "  · Non-Schaeffler High-Temperature Grease",
                ],
              },
              Object {
                "identifier": "text",
                "text": Array [
                  "  · Arcanol MULTITOP",
                ],
              },
              Object {
                "identifier": "text",
                "text": Array [
                  "  · Arcanol MULTI2",
                ],
              },
              Object {
                "identifier": "text",
                "text": Array [
                  "  · Arcanol MULTI3",
                ],
              },
              Object {
                "identifier": "text",
                "text": Array [
                  "  · Arcanol LOAD1000",
                ],
              },
              Object {
                "identifier": "text",
                "text": Array [
                  "  · Arcanol LOAD150",
                ],
              },
              Object {
                "identifier": "text",
                "text": Array [
                  "  · Arcanol LOAD220",
                ],
              },
              Object {
                "identifier": "text",
                "text": Array [
                  "  · Arcanol LOAD400",
                ],
              },
              Object {
                "identifier": "text",
                "text": Array [
                  "  · Arcanol LOAD460",
                ],
              },
              Object {
                "identifier": "text",
                "text": Array [
                  "  · Arcanol TEMP90",
                ],
              },
              Object {
                "identifier": "text",
                "text": Array [
                  "  · Arcanol TEMP110",
                ],
              },
              Object {
                "identifier": "text",
                "text": Array [
                  "  · Arcanol TEMP120",
                ],
              },
              Object {
                "identifier": "text",
                "text": Array [
                  "  · Arcanol TEMP200",
                ],
              },
              Object {
                "identifier": "text",
                "text": Array [
                  "  · Arcanol SPEED 2,6",
                ],
              },
              Object {
                "identifier": "text",
                "text": Array [
                  "  · Arcanol VIB3",
                ],
              },
              Object {
                "identifier": "text",
                "text": Array [
                  "  · Arcanol FOOD2",
                ],
              },
              Object {
                "identifier": "text",
                "text": Array [
                  " ",
                ],
              },
              Object {
                "identifier": "text",
                "text": Array [
                  "A grease service life >3 years must be agreed with the lubricant supplier with regard to the respective application. The guide value issued in Bearinx for the grease service life is limited to 5 years. In individual cases, grease usage durations greater than 5 years are also possible. If necessary, please contact the Schaeffler engineering service, that can advise you on the basis of the practical experience. ",
                ],
              },
              Object {
                "identifier": "text",
                "text": Array [
                  " ",
                ],
              },
              Object {
                "identifier": "text",
                "text": Array [
                  "The operating temperature is below the recommended minimum operating temperature for the following greases:",
                ],
              },
              Object {
                "identifier": "text",
                "text": Array [
                  "  · Arcanol TEMP120 ( 158.0 deg F < 176.0 deg F ) ",
                ],
              },
              Object {
                "identifier": "text",
                "text": Array [
                  "  · Arcanol TEMP200 ( 158.0 deg F < 302.0 deg F ) ",
                ],
              },
              Object {
                "identifier": "text",
                "text": Array [
                  " ",
                ],
              },
            ],
          },
        ],
        "title": "Warnings",
        "titleID": "STRING_WARNING_BLOCK",
      },
      Object {
        "identifier": "block",
        "subordinates": Array [
          Object {
            "identifier": "text",
            "text": Array [
              " ",
            ],
          },
          Object {
            "identifier": "block",
            "subordinates": Array [
              Object {
                "identifier": "text",
                "text": Array [
                  "As the simplified load input via load levels has been used, the thermally safe operating speed as well as the static load safety are not checked.",
                ],
              },
              Object {
                "identifier": "text",
                "text": Array [
                  " ",
                ],
              },
              Object {
                "identifier": "text",
                "text": Array [
                  "Calculation of the grease service life and the relubrication interval corresponds to the catalog method. The internal geometry and the internal load distribution are not taken into consideration in the calculation. If you have any questions relating to selection of a suitable grease, please contact the Schaeffler engineering service. If the axis of rotation is vertical, the supply of lubricant to the contact must be checked.",
                ],
              },
              Object {
                "identifier": "text",
                "text": Array [
                  " ",
                ],
              },
              Object {
                "identifier": "text",
                "text": Array [
                  "In the Grease App, fatigue life is not considered or calculated. Please check this separately.",
                ],
              },
              Object {
                "identifier": "text",
                "text": Array [
                  " ",
                ],
              },
              Object {
                "identifier": "text",
                "text": Array [
                  "When calculating the amount of lubricant, only the volume of the bearing is taken into account, while the free space of the surrounding construction and the volume of the supply lines are not considered.",
                ],
              },
              Object {
                "identifier": "text",
                "text": Array [
                  " ",
                ],
              },
              Object {
                "identifier": "text",
                "text": Array [
                  "The specified grease quantities are only guide values, which may be deviated from based on practical experience. In case of questions, please contact the Schaeffler engineering service.",
                ],
              },
              Object {
                "identifier": "text",
                "text": Array [
                  " ",
                ],
              },
              Object {
                "identifier": "text",
                "text": Array [
                  "For the Non-Schaeffler Greases the individual properties are unknown. Therefore, criteria on the suitability of the grease are not checked for these greases (e.g., viscosity ratio, additivation, n*dm-limits of the grease, thermally safe operating speed, suitability for the CONCEPT1 lubricator).",
                ],
              },
              Object {
                "identifier": "text",
                "text": Array [
                  "  · Non-Schaeffler Multi-Purpose Grease",
                ],
              },
              Object {
                "identifier": "text",
                "text": Array [
                  "  · Non-Schaeffler High-Temperature Grease",
                ],
              },
              Object {
                "identifier": "text",
                "text": Array [
                  " ",
                ],
              },
            ],
          },
          Object {
            "identifier": "text",
            "text": Array [
              "calculationResult.axisOrientation.disclaimer",
            ],
          },
        ],
        "title": "Notes",
        "titleID": "STRING_NOTE_BLOCK",
      },
    ],
    "title": "calculationResult.errorsWarningsNotes",
  },
  "greaseResult": Array [
    Object {
      "greaseSelection": Object {
        "baseOilViscosityAt40": "responseOf:baseOilViscosityAt40",
        "density": "responseOf:density",
        "greaseServiceLife": undefined,
        "h1Registration": "responseOf:h1Registration",
        "lowerTemperatureLimit": "responseOf:lowerTemperatureLimit",
        "upperTemperatureLimit": "responseOf:upperTemperatureLimit",
      },
      "initialLubrication": Object {
        "initialGreaseQuantity": "responseOf:initialGreaseQuantity",
      },
      "isPreferred": false,
      "isSufficient": "responseOf:isSufficient",
      "mainTitle": "Arcanol MULTI2",
      "performance": Object {
        "additiveRequired": "responseOf:additiveRequired",
        "effectiveEpAdditivation": "responseOf:effectiveEpAdditivation",
        "lowFriction": "responseOf:lowFriction",
        "suitableForVibrations": "responseOf:suitableForVibrations",
        "supportForSeals": "responseOf:supportForSeals",
        "viscosityRatio": "responseOf:viscosityRatio",
      },
      "relubrication": Object {
        "concept1": "responseOf:automaticLubrication",
        "maximumManualRelubricationPerInterval": "responseOf:maxManualRelubricationIntervalForVerticalAxis",
        "relubricationInterval": undefined,
        "relubricationPer30Days": undefined,
        "relubricationPer365Days": "responseOf:relubricationPer365Days",
        "relubricationPer7Days": "responseOf:getMaximumLubricationPer7Days",
        "relubricationQuantityPer1000OperatingHours": undefined,
      },
      "subTitle": "Mineral oil, NLGI2, Lithium soap",
    },
    Object {
      "greaseSelection": Object {
        "baseOilViscosityAt40": "responseOf:baseOilViscosityAt40",
        "density": "responseOf:density",
        "greaseServiceLife": undefined,
        "h1Registration": "responseOf:h1Registration",
        "lowerTemperatureLimit": "responseOf:lowerTemperatureLimit",
        "upperTemperatureLimit": "responseOf:upperTemperatureLimit",
      },
      "initialLubrication": Object {
        "initialGreaseQuantity": "responseOf:initialGreaseQuantity",
      },
      "isPreferred": false,
      "isSufficient": "responseOf:isSufficient",
      "mainTitle": "Arcanol MULTI3",
      "performance": Object {
        "additiveRequired": "responseOf:additiveRequired",
        "effectiveEpAdditivation": "responseOf:effectiveEpAdditivation",
        "lowFriction": "responseOf:lowFriction",
        "suitableForVibrations": "responseOf:suitableForVibrations",
        "supportForSeals": "responseOf:supportForSeals",
        "viscosityRatio": "responseOf:viscosityRatio",
      },
      "relubrication": Object {
        "concept1": "responseOf:automaticLubrication",
        "maximumManualRelubricationPerInterval": "responseOf:maxManualRelubricationIntervalForVerticalAxis",
        "relubricationInterval": undefined,
        "relubricationPer30Days": undefined,
        "relubricationPer365Days": "responseOf:relubricationPer365Days",
        "relubricationPer7Days": "responseOf:getMaximumLubricationPer7Days",
        "relubricationQuantityPer1000OperatingHours": undefined,
      },
      "subTitle": "Mineral oil, NLGI3, Lithium soap",
    },
    Object {
      "greaseSelection": Object {
        "baseOilViscosityAt40": "responseOf:baseOilViscosityAt40",
        "density": "responseOf:density",
        "greaseServiceLife": undefined,
        "h1Registration": "responseOf:h1Registration",
        "lowerTemperatureLimit": "responseOf:lowerTemperatureLimit",
        "upperTemperatureLimit": "responseOf:upperTemperatureLimit",
      },
      "initialLubrication": Object {
        "initialGreaseQuantity": "responseOf:initialGreaseQuantity",
      },
      "isPreferred": false,
      "isSufficient": "responseOf:isSufficient",
      "mainTitle": "Arcanol MULTITOP",
      "performance": Object {
        "additiveRequired": "responseOf:additiveRequired",
        "effectiveEpAdditivation": "responseOf:effectiveEpAdditivation",
        "lowFriction": "responseOf:lowFriction",
        "suitableForVibrations": "responseOf:suitableForVibrations",
        "supportForSeals": "responseOf:supportForSeals",
        "viscosityRatio": "responseOf:viscosityRatio",
      },
      "relubrication": Object {
        "concept1": "responseOf:automaticLubrication",
        "maximumManualRelubricationPerInterval": "responseOf:maxManualRelubricationIntervalForVerticalAxis",
        "relubricationInterval": undefined,
        "relubricationPer30Days": undefined,
        "relubricationPer365Days": "responseOf:relubricationPer365Days",
        "relubricationPer7Days": "responseOf:getMaximumLubricationPer7Days",
        "relubricationQuantityPer1000OperatingHours": undefined,
      },
      "subTitle": "Ester/Min/SHC oil, NLGI2, Lithium soap",
    },
    Object {
      "greaseSelection": Object {
        "baseOilViscosityAt40": "responseOf:baseOilViscosityAt40",
        "density": "responseOf:density",
        "greaseServiceLife": undefined,
        "h1Registration": "responseOf:h1Registration",
        "lowerTemperatureLimit": "responseOf:lowerTemperatureLimit",
        "upperTemperatureLimit": "responseOf:upperTemperatureLimit",
      },
      "initialLubrication": Object {
        "initialGreaseQuantity": "responseOf:initialGreaseQuantity",
      },
      "isPreferred": false,
      "isSufficient": "responseOf:isSufficient",
      "mainTitle": "Arcanol LOAD150",
      "performance": Object {
        "additiveRequired": "responseOf:additiveRequired",
        "effectiveEpAdditivation": "responseOf:effectiveEpAdditivation",
        "lowFriction": "responseOf:lowFriction",
        "suitableForVibrations": "responseOf:suitableForVibrations",
        "supportForSeals": "responseOf:supportForSeals",
        "viscosityRatio": "responseOf:viscosityRatio",
      },
      "relubrication": Object {
        "concept1": "responseOf:automaticLubrication",
        "maximumManualRelubricationPerInterval": "responseOf:maxManualRelubricationIntervalForVerticalAxis",
        "relubricationInterval": undefined,
        "relubricationPer30Days": undefined,
        "relubricationPer365Days": "responseOf:relubricationPer365Days",
        "relubricationPer7Days": "responseOf:getMaximumLubricationPer7Days",
        "relubricationQuantityPer1000OperatingHours": undefined,
      },
      "subTitle": "Mineral oil, NLGI2, Lithium/complex soap",
    },
    Object {
      "greaseSelection": Object {
        "baseOilViscosityAt40": "responseOf:baseOilViscosityAt40",
        "density": "responseOf:density",
        "greaseServiceLife": undefined,
        "h1Registration": "responseOf:h1Registration",
        "lowerTemperatureLimit": "responseOf:lowerTemperatureLimit",
        "upperTemperatureLimit": "responseOf:upperTemperatureLimit",
      },
      "initialLubrication": Object {
        "initialGreaseQuantity": "responseOf:initialGreaseQuantity",
      },
      "isPreferred": false,
      "isSufficient": "responseOf:isSufficient",
      "mainTitle": "Arcanol LOAD400",
      "performance": Object {
        "additiveRequired": "responseOf:additiveRequired",
        "effectiveEpAdditivation": "responseOf:effectiveEpAdditivation",
        "lowFriction": "responseOf:lowFriction",
        "suitableForVibrations": "responseOf:suitableForVibrations",
        "supportForSeals": "responseOf:supportForSeals",
        "viscosityRatio": "responseOf:viscosityRatio",
      },
      "relubrication": Object {
        "concept1": "responseOf:automaticLubrication",
        "maximumManualRelubricationPerInterval": "responseOf:maxManualRelubricationIntervalForVerticalAxis",
        "relubricationInterval": undefined,
        "relubricationPer30Days": undefined,
        "relubricationPer365Days": "responseOf:relubricationPer365Days",
        "relubricationPer7Days": "responseOf:getMaximumLubricationPer7Days",
        "relubricationQuantityPer1000OperatingHours": undefined,
      },
      "subTitle": "Mineral oil, NLGI2, Lithium/calcium soap",
    },
    Object {
      "greaseSelection": Object {
        "baseOilViscosityAt40": "responseOf:baseOilViscosityAt40",
        "density": "responseOf:density",
        "greaseServiceLife": undefined,
        "h1Registration": "responseOf:h1Registration",
        "lowerTemperatureLimit": "responseOf:lowerTemperatureLimit",
        "upperTemperatureLimit": "responseOf:upperTemperatureLimit",
      },
      "initialLubrication": Object {
        "initialGreaseQuantity": "responseOf:initialGreaseQuantity",
      },
      "isPreferred": false,
      "isSufficient": "responseOf:isSufficient",
      "mainTitle": "Arcanol MOTION 2",
      "performance": Object {
        "additiveRequired": "responseOf:additiveRequired",
        "effectiveEpAdditivation": "responseOf:effectiveEpAdditivation",
        "lowFriction": "responseOf:lowFriction",
        "suitableForVibrations": "responseOf:suitableForVibrations",
        "supportForSeals": "responseOf:supportForSeals",
        "viscosityRatio": "responseOf:viscosityRatio",
      },
      "relubrication": Object {
        "concept1": "responseOf:automaticLubrication",
        "maximumManualRelubricationPerInterval": "responseOf:maxManualRelubricationIntervalForVerticalAxis",
        "relubricationInterval": undefined,
        "relubricationPer30Days": undefined,
        "relubricationPer365Days": "responseOf:relubricationPer365Days",
        "relubricationPer7Days": "responseOf:getMaximumLubricationPer7Days",
        "relubricationQuantityPer1000OperatingHours": undefined,
      },
      "subTitle": "Synthetic oil, NLGI2, Lithium soap",
    },
    Object {
      "greaseSelection": Object {
        "baseOilViscosityAt40": "responseOf:baseOilViscosityAt40",
        "density": "responseOf:density",
        "greaseServiceLife": undefined,
        "h1Registration": "responseOf:h1Registration",
        "lowerTemperatureLimit": "responseOf:lowerTemperatureLimit",
        "upperTemperatureLimit": "responseOf:upperTemperatureLimit",
      },
      "initialLubrication": Object {
        "initialGreaseQuantity": "responseOf:initialGreaseQuantity",
      },
      "isPreferred": false,
      "isSufficient": "responseOf:isSufficient",
      "mainTitle": "Arcanol TEMP90",
      "performance": Object {
        "additiveRequired": "responseOf:additiveRequired",
        "effectiveEpAdditivation": "responseOf:effectiveEpAdditivation",
        "lowFriction": "responseOf:lowFriction",
        "suitableForVibrations": "responseOf:suitableForVibrations",
        "supportForSeals": "responseOf:supportForSeals",
        "viscosityRatio": "responseOf:viscosityRatio",
      },
      "relubrication": Object {
        "concept1": "responseOf:automaticLubrication",
        "maximumManualRelubricationPerInterval": "responseOf:maxManualRelubricationIntervalForVerticalAxis",
        "relubricationInterval": undefined,
        "relubricationPer30Days": undefined,
        "relubricationPer365Days": "responseOf:relubricationPer365Days",
        "relubricationPer7Days": "responseOf:getMaximumLubricationPer7Days",
        "relubricationQuantityPer1000OperatingHours": undefined,
      },
      "subTitle": "Mineral + PAO oil, NLGI3, Polyurea",
    },
    Object {
      "greaseSelection": Object {
        "baseOilViscosityAt40": "responseOf:baseOilViscosityAt40",
        "density": "responseOf:density",
        "greaseServiceLife": undefined,
        "h1Registration": "responseOf:h1Registration",
        "lowerTemperatureLimit": "responseOf:lowerTemperatureLimit",
        "upperTemperatureLimit": "responseOf:upperTemperatureLimit",
      },
      "initialLubrication": Object {
        "initialGreaseQuantity": "responseOf:initialGreaseQuantity",
      },
      "isPreferred": false,
      "isSufficient": "responseOf:isSufficient",
      "mainTitle": "Arcanol TEMP110",
      "performance": Object {
        "additiveRequired": "responseOf:additiveRequired",
        "effectiveEpAdditivation": "responseOf:effectiveEpAdditivation",
        "lowFriction": "responseOf:lowFriction",
        "suitableForVibrations": "responseOf:suitableForVibrations",
        "supportForSeals": "responseOf:supportForSeals",
        "viscosityRatio": "responseOf:viscosityRatio",
      },
      "relubrication": Object {
        "concept1": "responseOf:automaticLubrication",
        "maximumManualRelubricationPerInterval": "responseOf:maxManualRelubricationIntervalForVerticalAxis",
        "relubricationInterval": undefined,
        "relubricationPer30Days": undefined,
        "relubricationPer365Days": "responseOf:relubricationPer365Days",
        "relubricationPer7Days": "responseOf:getMaximumLubricationPer7Days",
        "relubricationQuantityPer1000OperatingHours": undefined,
      },
      "subTitle": "Synthetic oil, NLGI2, Lithium/complex soap",
    },
    Object {
      "greaseSelection": Object {
        "baseOilViscosityAt40": "responseOf:baseOilViscosityAt40",
        "density": "responseOf:density",
        "greaseServiceLife": undefined,
        "h1Registration": "responseOf:h1Registration",
        "lowerTemperatureLimit": "responseOf:lowerTemperatureLimit",
        "upperTemperatureLimit": "responseOf:upperTemperatureLimit",
      },
      "initialLubrication": Object {
        "initialGreaseQuantity": "responseOf:initialGreaseQuantity",
      },
      "isPreferred": false,
      "isSufficient": "responseOf:isSufficient",
      "mainTitle": "Arcanol LOAD220",
      "performance": Object {
        "additiveRequired": "responseOf:additiveRequired",
        "effectiveEpAdditivation": "responseOf:effectiveEpAdditivation",
        "lowFriction": "responseOf:lowFriction",
        "suitableForVibrations": "responseOf:suitableForVibrations",
        "supportForSeals": "responseOf:supportForSeals",
        "viscosityRatio": "responseOf:viscosityRatio",
      },
      "relubrication": Object {
        "concept1": "responseOf:automaticLubrication",
        "maximumManualRelubricationPerInterval": "responseOf:maxManualRelubricationIntervalForVerticalAxis",
        "relubricationInterval": undefined,
        "relubricationPer30Days": undefined,
        "relubricationPer365Days": "responseOf:relubricationPer365Days",
        "relubricationPer7Days": "responseOf:getMaximumLubricationPer7Days",
        "relubricationQuantityPer1000OperatingHours": undefined,
      },
      "subTitle": "Mineral oil, NLGI2, Lithium/calcium soap",
    },
    Object {
      "greaseSelection": Object {
        "baseOilViscosityAt40": "responseOf:baseOilViscosityAt40",
        "density": "responseOf:density",
        "greaseServiceLife": undefined,
        "h1Registration": "responseOf:h1Registration",
        "lowerTemperatureLimit": "responseOf:lowerTemperatureLimit",
        "upperTemperatureLimit": "responseOf:upperTemperatureLimit",
      },
      "initialLubrication": Object {
        "initialGreaseQuantity": "responseOf:initialGreaseQuantity",
      },
      "isPreferred": false,
      "isSufficient": "responseOf:isSufficient",
      "mainTitle": "Arcanol LOAD460",
      "performance": Object {
        "additiveRequired": "responseOf:additiveRequired",
        "effectiveEpAdditivation": "responseOf:effectiveEpAdditivation",
        "lowFriction": "responseOf:lowFriction",
        "suitableForVibrations": "responseOf:suitableForVibrations",
        "supportForSeals": "responseOf:supportForSeals",
        "viscosityRatio": "responseOf:viscosityRatio",
      },
      "relubrication": Object {
        "concept1": "responseOf:automaticLubrication",
        "maximumManualRelubricationPerInterval": "responseOf:maxManualRelubricationIntervalForVerticalAxis",
        "relubricationInterval": undefined,
        "relubricationPer30Days": undefined,
        "relubricationPer365Days": "responseOf:relubricationPer365Days",
        "relubricationPer7Days": "responseOf:getMaximumLubricationPer7Days",
        "relubricationQuantityPer1000OperatingHours": undefined,
      },
      "subTitle": "Mineral oil, NLGI1, Lithium/calcium soap",
    },
    Object {
      "greaseSelection": Object {
        "baseOilViscosityAt40": "responseOf:baseOilViscosityAt40",
        "density": "responseOf:density",
        "greaseServiceLife": undefined,
        "h1Registration": "responseOf:h1Registration",
        "lowerTemperatureLimit": "responseOf:lowerTemperatureLimit",
        "upperTemperatureLimit": "responseOf:upperTemperatureLimit",
      },
      "initialLubrication": Object {
        "initialGreaseQuantity": "responseOf:initialGreaseQuantity",
      },
      "isPreferred": false,
      "isSufficient": "responseOf:isSufficient",
      "mainTitle": "Arcanol TEMP120",
      "performance": Object {
        "additiveRequired": "responseOf:additiveRequired",
        "effectiveEpAdditivation": "responseOf:effectiveEpAdditivation",
        "lowFriction": "responseOf:lowFriction",
        "suitableForVibrations": "responseOf:suitableForVibrations",
        "supportForSeals": "responseOf:supportForSeals",
        "viscosityRatio": "responseOf:viscosityRatio",
      },
      "relubrication": Object {
        "concept1": "responseOf:automaticLubrication",
        "maximumManualRelubricationPerInterval": "responseOf:maxManualRelubricationIntervalForVerticalAxis",
        "relubricationInterval": undefined,
        "relubricationPer30Days": undefined,
        "relubricationPer365Days": "responseOf:relubricationPer365Days",
        "relubricationPer7Days": "responseOf:getMaximumLubricationPer7Days",
        "relubricationQuantityPer1000OperatingHours": undefined,
      },
      "subTitle": "PAO oil, NLGI2, Polyurea",
    },
    Object {
      "greaseSelection": Object {
        "baseOilViscosityAt40": "responseOf:baseOilViscosityAt40",
        "density": "responseOf:density",
        "greaseServiceLife": undefined,
        "h1Registration": "responseOf:h1Registration",
        "lowerTemperatureLimit": "responseOf:lowerTemperatureLimit",
        "upperTemperatureLimit": "responseOf:upperTemperatureLimit",
      },
      "initialLubrication": Object {
        "initialGreaseQuantity": "responseOf:initialGreaseQuantity",
      },
      "isPreferred": false,
      "isSufficient": "responseOf:isSufficient",
      "mainTitle": "Arcanol Clean M",
      "performance": Object {
        "additiveRequired": "responseOf:additiveRequired",
        "effectiveEpAdditivation": "responseOf:effectiveEpAdditivation",
        "lowFriction": "responseOf:lowFriction",
        "suitableForVibrations": "responseOf:suitableForVibrations",
        "supportForSeals": "responseOf:supportForSeals",
        "viscosityRatio": "responseOf:viscosityRatio",
      },
      "relubrication": Object {
        "concept1": "responseOf:automaticLubrication",
        "maximumManualRelubricationPerInterval": "responseOf:maxManualRelubricationIntervalForVerticalAxis",
        "relubricationInterval": undefined,
        "relubricationPer30Days": undefined,
        "relubricationPer365Days": "responseOf:relubricationPer365Days",
        "relubricationPer7Days": "responseOf:getMaximumLubricationPer7Days",
        "relubricationQuantityPer1000OperatingHours": undefined,
      },
      "subTitle": "Ether oil, NLGI2, Polyurea",
    },
    Object {
      "greaseSelection": Object {
        "baseOilViscosityAt40": "responseOf:baseOilViscosityAt40",
        "density": "responseOf:density",
        "greaseServiceLife": undefined,
        "h1Registration": "responseOf:h1Registration",
        "lowerTemperatureLimit": "responseOf:lowerTemperatureLimit",
        "upperTemperatureLimit": "responseOf:upperTemperatureLimit",
      },
      "initialLubrication": Object {
        "initialGreaseQuantity": "responseOf:initialGreaseQuantity",
      },
      "isPreferred": false,
      "isSufficient": "responseOf:isSufficient",
      "mainTitle": "Arcanol VIB3",
      "performance": Object {
        "additiveRequired": "responseOf:additiveRequired",
        "effectiveEpAdditivation": "responseOf:effectiveEpAdditivation",
        "lowFriction": "responseOf:lowFriction",
        "suitableForVibrations": "responseOf:suitableForVibrations",
        "supportForSeals": "responseOf:supportForSeals",
        "viscosityRatio": "responseOf:viscosityRatio",
      },
      "relubrication": Object {
        "concept1": "responseOf:automaticLubrication",
        "maximumManualRelubricationPerInterval": "responseOf:maxManualRelubricationIntervalForVerticalAxis",
        "relubricationInterval": undefined,
        "relubricationPer30Days": undefined,
        "relubricationPer365Days": "responseOf:relubricationPer365Days",
        "relubricationPer7Days": "responseOf:getMaximumLubricationPer7Days",
        "relubricationQuantityPer1000OperatingHours": undefined,
      },
      "subTitle": "Mineral oil, NLGI3-4, Lithium/complex soap",
    },
    Object {
      "greaseSelection": Object {
        "baseOilViscosityAt40": "responseOf:baseOilViscosityAt40",
        "density": "responseOf:density",
        "greaseServiceLife": undefined,
        "h1Registration": "responseOf:h1Registration",
        "lowerTemperatureLimit": "responseOf:lowerTemperatureLimit",
        "upperTemperatureLimit": "responseOf:upperTemperatureLimit",
      },
      "initialLubrication": Object {
        "initialGreaseQuantity": "responseOf:initialGreaseQuantity",
      },
      "isPreferred": false,
      "isSufficient": "responseOf:isSufficient",
      "mainTitle": "Arcanol FOOD2",
      "performance": Object {
        "additiveRequired": "responseOf:additiveRequired",
        "effectiveEpAdditivation": "responseOf:effectiveEpAdditivation",
        "lowFriction": "responseOf:lowFriction",
        "suitableForVibrations": "responseOf:suitableForVibrations",
        "supportForSeals": "responseOf:supportForSeals",
        "viscosityRatio": "responseOf:viscosityRatio",
      },
      "relubrication": Object {
        "concept1": "responseOf:automaticLubrication",
        "maximumManualRelubricationPerInterval": "responseOf:maxManualRelubricationIntervalForVerticalAxis",
        "relubricationInterval": undefined,
        "relubricationPer30Days": undefined,
        "relubricationPer365Days": "responseOf:relubricationPer365Days",
        "relubricationPer7Days": "responseOf:getMaximumLubricationPer7Days",
        "relubricationQuantityPer1000OperatingHours": undefined,
      },
      "subTitle": "PAO oil, NLGI2, Aluminum-Complex",
    },
    Object {
      "greaseSelection": Object {
        "baseOilViscosityAt40": "responseOf:baseOilViscosityAt40",
        "density": "responseOf:density",
        "greaseServiceLife": undefined,
        "h1Registration": "responseOf:h1Registration",
        "lowerTemperatureLimit": "responseOf:lowerTemperatureLimit",
        "upperTemperatureLimit": "responseOf:upperTemperatureLimit",
      },
      "initialLubrication": Object {
        "initialGreaseQuantity": "responseOf:initialGreaseQuantity",
      },
      "isPreferred": false,
      "isSufficient": "responseOf:isSufficient",
      "mainTitle": "Arcanol TEMP200",
      "performance": Object {
        "additiveRequired": "responseOf:additiveRequired",
        "effectiveEpAdditivation": "responseOf:effectiveEpAdditivation",
        "lowFriction": "responseOf:lowFriction",
        "suitableForVibrations": "responseOf:suitableForVibrations",
        "supportForSeals": "responseOf:supportForSeals",
        "viscosityRatio": "responseOf:viscosityRatio",
      },
      "relubrication": Object {
        "concept1": "responseOf:automaticLubrication",
        "maximumManualRelubricationPerInterval": "responseOf:maxManualRelubricationIntervalForVerticalAxis",
        "relubricationInterval": undefined,
        "relubricationPer30Days": undefined,
        "relubricationPer365Days": "responseOf:relubricationPer365Days",
        "relubricationPer7Days": "responseOf:getMaximumLubricationPer7Days",
        "relubricationQuantityPer1000OperatingHours": undefined,
      },
      "subTitle": "Alkoxyfluor oil, NLGI2, PTFE",
    },
    Object {
      "greaseSelection": Object {
        "baseOilViscosityAt40": "responseOf:baseOilViscosityAt40",
        "density": "responseOf:density",
        "greaseServiceLife": undefined,
        "h1Registration": "responseOf:h1Registration",
        "lowerTemperatureLimit": "responseOf:lowerTemperatureLimit",
        "upperTemperatureLimit": "responseOf:upperTemperatureLimit",
      },
      "initialLubrication": Object {
        "initialGreaseQuantity": "responseOf:initialGreaseQuantity",
      },
      "isPreferred": false,
      "isSufficient": "responseOf:isSufficient",
      "mainTitle": "Arcanol LOAD1000",
      "performance": Object {
        "additiveRequired": "responseOf:additiveRequired",
        "effectiveEpAdditivation": "responseOf:effectiveEpAdditivation",
        "lowFriction": "responseOf:lowFriction",
        "suitableForVibrations": "responseOf:suitableForVibrations",
        "supportForSeals": "responseOf:supportForSeals",
        "viscosityRatio": "responseOf:viscosityRatio",
      },
      "relubrication": Object {
        "concept1": "responseOf:automaticLubrication",
        "maximumManualRelubricationPerInterval": "responseOf:maxManualRelubricationIntervalForVerticalAxis",
        "relubricationInterval": undefined,
        "relubricationPer30Days": undefined,
        "relubricationPer365Days": "responseOf:relubricationPer365Days",
        "relubricationPer7Days": "responseOf:getMaximumLubricationPer7Days",
        "relubricationQuantityPer1000OperatingHours": undefined,
      },
      "subTitle": "Mineral oil, NLGI2, Lithium/calcium soap",
    },
    Object {
      "greaseSelection": Object {
        "baseOilViscosityAt40": "responseOf:baseOilViscosityAt40",
        "density": "responseOf:density",
        "greaseServiceLife": undefined,
        "h1Registration": "responseOf:h1Registration",
        "lowerTemperatureLimit": "responseOf:lowerTemperatureLimit",
        "upperTemperatureLimit": "responseOf:upperTemperatureLimit",
      },
      "initialLubrication": Object {
        "initialGreaseQuantity": "responseOf:initialGreaseQuantity",
      },
      "isPreferred": false,
      "isSufficient": "responseOf:isSufficient",
      "mainTitle": "Arcanol SPEED 2,6",
      "performance": Object {
        "additiveRequired": "responseOf:additiveRequired",
        "effectiveEpAdditivation": "responseOf:effectiveEpAdditivation",
        "lowFriction": "responseOf:lowFriction",
        "suitableForVibrations": "responseOf:suitableForVibrations",
        "supportForSeals": "responseOf:supportForSeals",
        "viscosityRatio": "responseOf:viscosityRatio",
      },
      "relubrication": Object {
        "concept1": "responseOf:automaticLubrication",
        "maximumManualRelubricationPerInterval": "responseOf:maxManualRelubricationIntervalForVerticalAxis",
        "relubricationInterval": undefined,
        "relubricationPer30Days": undefined,
        "relubricationPer365Days": "responseOf:relubricationPer365Days",
        "relubricationPer7Days": "responseOf:getMaximumLubricationPer7Days",
        "relubricationQuantityPer1000OperatingHours": undefined,
      },
      "subTitle": "PAO/Ester oil, NLGI2-3, Lithium/complex soap",
    },
    Object {
      "greaseSelection": Object {
        "baseOilViscosityAt40": "responseOf:baseOilViscosityAt40",
        "density": "responseOf:density",
        "greaseServiceLife": undefined,
        "h1Registration": "responseOf:h1Registration",
        "lowerTemperatureLimit": "responseOf:lowerTemperatureLimit",
        "upperTemperatureLimit": "responseOf:upperTemperatureLimit",
      },
      "initialLubrication": Object {
        "initialGreaseQuantity": "responseOf:initialGreaseQuantity",
      },
      "isPreferred": false,
      "isSufficient": "responseOf:isSufficient",
      "mainTitle": "Non-Schaeffler Multi-Purpose Grease",
      "performance": Object {
        "additiveRequired": "responseOf:additiveRequired",
        "effectiveEpAdditivation": "responseOf:effectiveEpAdditivation",
        "lowFriction": "responseOf:lowFriction",
        "suitableForVibrations": "responseOf:suitableForVibrations",
        "supportForSeals": "responseOf:supportForSeals",
        "viscosityRatio": "responseOf:viscosityRatio",
      },
      "relubrication": Object {
        "concept1": "responseOf:automaticLubrication",
        "maximumManualRelubricationPerInterval": "responseOf:maxManualRelubricationIntervalForVerticalAxis",
        "relubricationInterval": undefined,
        "relubricationPer30Days": undefined,
        "relubricationPer365Days": "responseOf:relubricationPer365Days",
        "relubricationPer7Days": "responseOf:getMaximumLubricationPer7Days",
        "relubricationQuantityPer1000OperatingHours": undefined,
      },
    },
    Object {
      "greaseSelection": Object {
        "baseOilViscosityAt40": "responseOf:baseOilViscosityAt40",
        "density": "responseOf:density",
        "greaseServiceLife": undefined,
        "h1Registration": "responseOf:h1Registration",
        "lowerTemperatureLimit": "responseOf:lowerTemperatureLimit",
        "upperTemperatureLimit": "responseOf:upperTemperatureLimit",
      },
      "initialLubrication": Object {
        "initialGreaseQuantity": "responseOf:initialGreaseQuantity",
      },
      "isPreferred": false,
      "isSufficient": "responseOf:isSufficient",
      "mainTitle": "Non-Schaeffler High-Temperature Grease",
      "performance": Object {
        "additiveRequired": "responseOf:additiveRequired",
        "effectiveEpAdditivation": "responseOf:effectiveEpAdditivation",
        "lowFriction": "responseOf:lowFriction",
        "suitableForVibrations": "responseOf:suitableForVibrations",
        "supportForSeals": "responseOf:supportForSeals",
        "viscosityRatio": "responseOf:viscosityRatio",
      },
      "relubrication": Object {
        "concept1": "responseOf:automaticLubrication",
        "maximumManualRelubricationPerInterval": "responseOf:maxManualRelubricationIntervalForVerticalAxis",
        "relubricationInterval": undefined,
        "relubricationPer30Days": undefined,
        "relubricationPer365Days": "responseOf:relubricationPer365Days",
        "relubricationPer7Days": "responseOf:getMaximumLubricationPer7Days",
        "relubricationQuantityPer1000OperatingHours": undefined,
      },
    },
  ],
  "inputs": Object {
    "identifier": "block",
    "subordinates": Array [
      Object {
        "identifier": "variableBlock",
        "subordinates": Array [
          Object {
            "designation": "Designation",
            "identifier": "variableLine",
            "value": "6226",
          },
          Object {
            "designation": "Design",
            "identifier": "variableLine",
            "value": "Radial deep groove ball bearing",
          },
          Object {
            "designation": "Series",
            "identifier": "variableLine",
            "value": "62",
          },
        ],
        "title": "Bearing data",
        "titleID": "STRING_OUTP_BEARING_DATA",
      },
      Object {
        "identifier": "variableBlock",
        "subordinates": Array [
          Object {
            "abbreviation": "B",
            "designation": "Width",
            "identifier": "variableLine",
            "unit": "in",
            "value": "1.57480",
          },
          Object {
            "abbreviation": "D",
            "designation": "Outside diameter",
            "identifier": "variableLine",
            "unit": "in",
            "value": "9.05512",
          },
          Object {
            "abbreviation": "d",
            "designation": "Inside diameter",
            "identifier": "variableLine",
            "unit": "in",
            "value": "5.11811",
          },
        ],
        "title": "Bearing dimensions",
        "titleID": "STRING_OUTP_BEARING_DIMENSIONS",
      },
      Object {
        "identifier": "variableBlock",
        "subordinates": Array [
          Object {
            "abbreviation": "C0",
            "designation": "Basic static load rating",
            "identifier": "variableLine",
            "unit": "lbf",
            "value": "32800",
          },
          Object {
            "abbreviation": "C",
            "designation": "Basic dynamic load rating",
            "identifier": "variableLine",
            "unit": "lbf",
            "value": "39800",
          },
        ],
        "title": "Basic load ratings",
        "titleID": "STRING_OUTP_BASIC_LOAD_RATINGS",
      },
      Object {
        "identifier": "variableBlock",
        "subordinates": Array [
          Object {
            "designation": "Type of movement",
            "identifier": "variableLine",
            "value": "rotating",
          },
          Object {
            "abbreviation": "n_rel",
            "designation": "Relative speed",
            "identifier": "variableLine",
            "unit": "rpm",
            "value": "350.00",
          },
        ],
        "title": "Operating conditions",
        "titleID": "PROPERTY_PAGE_TITLE_OPERATING_CONDITIONS",
      },
      Object {
        "identifier": "variableBlock",
        "subordinates": Array [
          Object {
            "designation": "Load levels",
            "identifier": "variableLine",
            "value": "low (C0/P approx. 15)",
          },
        ],
        "title": "Load",
        "titleID": "STRING_OUTP_LOAD",
      },
      Object {
        "identifier": "variableBlock",
        "subordinates": Array [
          Object {
            "abbreviation": "Theta",
            "designation": "Operating temperature",
            "identifier": "variableLine",
            "unit": "deg F",
            "value": "158.0",
          },
          Object {
            "abbreviation": "t",
            "designation": "Ambient temperature",
            "identifier": "variableLine",
            "unit": "deg F",
            "value": "68.0",
          },
          Object {
            "designation": "Environmental influence",
            "identifier": "variableLine",
            "value": "0.8 (moderate)",
          },
        ],
        "title": "Temperatures",
        "titleID": "PROPERTY_PAGE_TITLE_TEMPERATURES",
      },
    ],
    "title": "Input",
    "titleID": "STRING_OUTP_INPUT",
  },
  "legalNote": "All rights are reserved, even in the event that a patent is granted or a utility model is registered. The document is to be treated confidentially. Without our written consent, neither the document itself nor copies thereof or other reproductions of the entire contents or excerpts thereof may be made available to third parties or misused in any other way by the recipient. Our dimensioning is based on your specifications and the information provided by you. Our dimensioning takes into account those risks which were recognizable to us on the basis of the information and specifications provided by you. Our dimensioning is made exclusively in connection with the purchase of our products. We do not assume any warranty in connection with the use of third-party products. The results have been worked out carefully and according to the state of the art, but do not represent any (explicit or implicit) guarantee of quality or durability in the legal sense. We are liable for the dimensioning and its results only in the case of intent and gross negligence. Unless expressly agreed otherwise, we are responsible for our scope of delivery only in accordance with the specifications documented herein, which form the basis of our dimensioning. We only perform component and system validations pertaining to the scope of services described herein. The responsibility for the overall system, of which our scope of delivery is only a part, is exclusively with you. All tasks and liabilities associated with the overall system and the integration of our scope of supply are your sole responsibility. In this respect, you are not released from the obligation to check our products for their suitability in the application with suitable methods or tests. If the document or the dimensioning is part of a supply contract or other agreement, the liability provisions agreed therein shall apply.",
}
`;

exports[`GreaseReportService sortKappa should prioritize entries with the best kappa values 1`] = `
Array [
  Object {
    "performance": Object {
      "viscosityRatio": Object {
        "value": 2.5,
      },
    },
    "relubrication": Object {
      "relubricationQuantityPer1000OperatingHours": Object {
        "value": 10,
      },
    },
  },
  Object {
    "performance": Object {
      "viscosityRatio": Object {
        "value": 2.5,
      },
    },
    "relubrication": Object {
      "relubricationQuantityPer1000OperatingHours": Object {
        "value": 8,
      },
    },
  },
  Object {
    "performance": Object {
      "viscosityRatio": Object {
        "value": 3.5,
      },
    },
    "relubrication": Object {
      "relubricationQuantityPer1000OperatingHours": Object {
        "value": 10,
      },
    },
  },
  Object {
    "performance": Object {
      "viscosityRatio": Object {
        "value": 1,
      },
    },
    "relubrication": Object {
      "relubricationQuantityPer1000OperatingHours": Object {
        "value": 10,
      },
    },
  },
  Object {
    "performance": Object {
      "viscosityRatio": Object {
        "value": 0.5,
      },
    },
    "relubrication": Object {
      "relubricationQuantityPer1000OperatingHours": Object {
        "value": 10,
      },
    },
  },
  Object {
    "performance": Object {
      "viscosityRatio": Object {
        "value": 4.5,
      },
    },
    "relubrication": Object {
      "relubricationQuantityPer1000OperatingHours": Object {
        "value": 10,
      },
    },
  },
]
`;
